--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="card-info">
                     <h1>VALDEZ, SAMUEL, C.</h1>
                     <p>I'm a BSIT student from DLL, currently a Sophomore. 
-                        I am 19 years old. I'm from Sariaya, Quezon.</p>
+                        I am 19 years old. I'm from Sariaya, Quezon.
+                    </p>
+                    <div class="card-info-bg"></div>
                 </div>
             </div>
             
@@ -38,7 +40,9 @@
                     <p>Coding is part of my small collection of hobbies 
                         which includes playing chess, working out and browsing 
                         fonts and matching colors. But coding, specifically, 
-                        I enjoy creating web portfolios or websites but mostly portfolios.</p>
+                        I enjoy creating web portfolios or websites but mostly portfolios.
+                    </p>
+                    <div class="card-info-bg"></div>
                 </div>
             </div>
             <div class="card">
@@ -48,6 +52,7 @@
                 <div class="card-info">
                     <h1>Zyzy</h1>
                     <p>Not the type to talk to me but isn't she lovely. Man, if only.</p>
+                    <div class="card-info-bg"></div>
                 </div>
             </div>
         </div>
